--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,82 @@
-#search{
-color: black;
-background-color: orchid;
+#searchb{
+color: white;
+background-color:#99BD05;
+box-shadow: 2px 2px 2px 1px #d3d3d3;
+border-radius: 2px;
 
+padding: 15px;
+border: 5px;
+
+}
+
+body{
+
+    margin: 0;
+    background-color: #f5f2f0;
+}
+h1{
+
+    background-color: #99BD05;
+    color: white;
+    padding: 25px;
+    text-align: center;
+    margin-top: 0;
+    
+}
+
+main{
+    margin: 50px;
+}
+
+#resultonshow{
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    font-size: 18px;
+    font-weight: bold;
+    padding-top: 15px;
+}
+
+#result{
+  
+    padding: 0%;
+    
+
+}
+
+.alias{
+font-family: Arial, Helvetica, sans-serif;
+
+margin-bottom: 0%;
+}
+
+.name{
+font-family: Arial, Helvetica, sans-serif;
+padding: 0%;
+margin: 0%;
+}
+
+h6{
+   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+   font-size: 12px;
+   margin: 0px;
+   padding: 10px;
+}
+
+#hero{
+    width: 80%;
+    padding: 15px;
+    border: 10px;
+    color: black;
+    margin: 10px;
+    box-shadow: 2px 2px 2px 2px #d3d3d3;
+    border-radius:5px;
+    
+
+    
+}
+
+.notfound{
+    color:red;
+    font-size: 25px;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif
 }
